force-app/main/default/objects/Account/fields/Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>