force-app/main/default/objects/Account/fields/Sum_of_the_open_opportunities_amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_the_open_opportunities_amount__c</fullName>
    <label>Sum of the open opportunities&apos; amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>