force-app/main/default/objects/Account/fields/The_highest_open_opportunity_s_amount__c.field-meta.xml
<CustomField>
    <fullName>The_highest_open_opportunity_s_amount__c</fullName>
    <label>The highest open opportunity&apos;s amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>