force-app/main/default/objects/Account/validationRules/Duplicate_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Account</fullName>
    <active>true</active>
    <errorConditionFormula>Duplicate_Check__c  == True</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Cannot Have Duplicate Account With Same Name</errorMessage>
</ValidationRule>